--- a/index.html
+++ b/index.html
@@ -1632,8 +1632,6 @@
                                                                     <a href="https://app.vedvaani.com/?origin=web&reportId=bundle_kundli_report_and_prime_horoscope_ios"
                                                                         target="_blank"
                                                                         class="ohio-widget button -default -small">
-
-
                                                                         Buy Now
                                                                     </a>
                                                                 </div>
@@ -1678,17 +1676,17 @@
                                                                             data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}"
                                                                             data-widget_type="text-editor.default">
                                                                             <div class="elementor-widget-container">
-                                                                                <p><span style="font-weight: 400;">Buy a
+                                                                                <p>With a<span
+                                                                                        style="font-weight: 400;">
                                                                                         <strong>Kundali Milan
-                                                                                            Compatibility
-                                                                                            Report</strong> (worth ₹999)
-                                                                                    </span><span
-                                                                                        style="font-weight: 400;">for
-                                                                                        just <strong>₹499
-                                                                                        </strong></span>&amp; get a
-                                                                                    <strong>Prime Horoscope
-                                                                                        Report</strong> (worth ₹499),
-                                                                                    absolutely <strong>FREE</strong>!
+                                                                                            Compatibility Report,
+                                                                                        </strong>
+                                                                                    </span>
+
+                                                                                    <span style="font-weight: 400;">Get
+                                                                                        a <strong>Prime Horoscope
+                                                                                            Report, </strong>absolutely
+                                                                                    </span> <strong>FREE!</strong>!
                                                                                 </p>
                                                                                 <p><span style="font-weight: 400;">✅
                                                                                         Instant Delivery ✅ Accurate
@@ -1706,8 +1704,6 @@
                                                                                     <a href="https://app.vedvaani.com/?origin=web&reportId=bundle_kundli_report_and_prime_horoscope_ios"
                                                                                         target="_blank"
                                                                                         class="ohio-widget button -default -large">
-
-
                                                                                         Buy Now
                                                                                     </a>
                                                                                 </div>
@@ -1766,7 +1762,7 @@
                                                         data-widget_type="heading.default">
                                                         <div class="elementor-widget-container">
                                                             <h2 class="elementor-heading-title elementor-size-default">
-                                                                The Kundali Milan Compatibility Report</h2>
+                                                                Kundali Milan Compatibility Report</h2>
                                                         </div>
                                                     </div>
                                                     <div class="elementor-element elementor-element-a1c05ca elementor-invisible elementor-widget elementor-widget-text-editor"
