--- a/index.html
+++ b/index.html
@@ -1629,8 +1629,6 @@ class="wp-singular page-template-default page page-id-250054 wp-embed-responsive
                                                     <a href="https://app.vedvaani.com/?origin=web&reportId=bundle_kundli_report_and_prime_horoscope_ios"
                                                         target="_blank"
                                                         class="ohio-widget button -default -small">
-
-
                                                         Buy Now
                                                     </a>
                                                 </div>
@@ -1675,17 +1673,12 @@ class="wp-singular page-template-default page page-id-250054 wp-embed-responsive
                                                             data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}"
                                                             data-widget_type="text-editor.default">
                                                             <div class="elementor-widget-container">
-                                                                <p><span style="font-weight: 400;">Buy a
-                                                                        <strong>Kundali Milan
-                                                                            Compatibility
-                                                                            Report</strong> (worth ₹999)
-                                                                    </span><span
-                                                                        style="font-weight: 400;">for
-                                                                        just <strong>₹499
-                                                                        </strong></span>&amp; get a
-                                                                    <strong>Prime Horoscope
-                                                                        Report</strong> (worth ₹499),
-                                                                    absolutely <strong>FREE</strong>!
+                                                                <p>With a<span style="font-weight: 400;">
+                                                                        <strong>Kundali Milan Compatibility Report, </strong> 
+                                                                    </span>
+                                                                    
+                                                                    <span
+                                                                        style="font-weight: 400;">Get a <strong>Prime Horoscope Report, </strong>absolutely </span> <strong>FREE!</strong>!
                                                                 </p>
                                                                 <p><span style="font-weight: 400;">✅
                                                                         Instant Delivery ✅ Accurate
@@ -1703,8 +1696,6 @@ class="wp-singular page-template-default page page-id-250054 wp-embed-responsive
                                                                     <a href="https://app.vedvaani.com/?origin=web&reportId=bundle_kundli_report_and_prime_horoscope_ios"
                                                                         target="_blank"
                                                                         class="ohio-widget button -default -large">
-
-
                                                                         Buy Now
                                                                     </a>
                                                                 </div>
@@ -1763,7 +1754,7 @@ class="wp-singular page-template-default page page-id-250054 wp-embed-responsive
                                         data-widget_type="heading.default">
                                         <div class="elementor-widget-container">
                                             <h2 class="elementor-heading-title elementor-size-default">
-                                                The Kundali Milan Compatibility Report</h2>
+                                                Kundali Milan Compatibility Report</h2>
                                         </div>
                                     </div>
                                     <div class="elementor-element elementor-element-a1c05ca elementor-invisible elementor-widget elementor-widget-text-editor"
