--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ content="Get clarity in love &amp; life! Buy a Kundali Milan Compatibility Repor
 <link rel="alternate" type="application/rss+xml" title="VedVaani &raquo; Feed" href="https://vedvaani.com/feed/" />
 <link rel="alternate" type="application/rss+xml" title="VedVaani &raquo; Comments Feed"
 href="https://vedvaani.com/comments/feed/" />
+<meta name="facebook-domain-verification" content="chxbmhhvlyjueg8iy9awjsb8z1j3s5" />
 <script type="text/javascript">
 /* <![CDATA[ */
 window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/16.0.1\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/16.0.1\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/vedvaani.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.8.3" } };
